# RadioBridge

./: .coveragerc  .gitignore  .pre-commit-config.yaml.disabled  CHANGELOG.md  CONTRIBUTING.md  ENHANCED_METADATA_PLAN.md  GITHUB_SETUP.md  LICENSE  Pipfile  README.md  README_ENHANCED_METADATA.md  SECURITY.md  WARP.md  pyproject.toml  repeaters_ca_riverside.csv
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  radio_support.yml
.github/workflows/: ci.yml  release-validation.yml  release.yml  version-bump.yml
docs/: RELEASE_PROCESS.md  architecture.md  coverage.md  cps_testing.md  pyenv_setup.md  repeaterbook_api.md  workflow_notifications.md
examples/: enhanced_anytone_878_example.py
scripts/: prepare-release.py
src/ham_formatter/: __init__.py  __main__.py  band_filter.py  cli.py  csv_utils.py  detailed_downloader.py  downloader.py  enhanced_downloader.py  logging_config.py  static_cli.py  static_commands.py  static_lists.py
src/ham_formatter/radios/: __init__.py  anytone_578.py  anytone_878.py  baofeng_dm32uv.py  baofeng_dn32uv.py  baofeng_k5.py  base.py
src/radiobridge/: __init__.py  __main__.py  band_filter.py  cli.py  csv_utils.py  detailed_downloader.py  downloader.py  enhanced_downloader.py  lightweight_data.py  logging_config.py  static_cli.py  static_commands.py  static_lists.py
src/radiobridge/radios/: __init__.py  anytone_578.py  anytone_878.py  anytone_878_v3.py  anytone_878_v4.py  baofeng_dm32uv.py  baofeng_k5.py  baofeng_k5_plus.py  baofeng_uv25.py  baofeng_uv28.py  baofeng_uv5r.py  baofeng_uv5rm.py  base.py  base_pandas.py  enhanced_metadata.py  metadata.py
tests/: test_baofeng_formatters.py  test_cli.py  test_cps_versions.py  test_csv_utils.py  test_detailed_downloader.py  test_downloader.py  test_enhanced_metadata.py  test_logging.py  test_radios.py
tests/fixtures/: city_search_sample.html  county_search_sample.html
