[project]
name = "radiobridge"
version = "0.3.0"
description = "Professional Amateur Radio Repeater Programming - Bridge RepeaterBook data to popular radio models"
authors = [
    {name = "Craig Simon - KO6GXM", email = "craig@ko6gxm.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Ham Radio",
]
keywords = ["ham radio", "amateur radio", "repeater", "radio programming", "radiobridge", "repeaterbook"]
dependencies = [
    "click>=8.0.0",
    "requests>=2.25.0",
    "python-dateutil>=2.8.0",
    "beautifulsoup4>=4.9.0",
    "lxml>=4.6.0",
]

[project.optional-dependencies]
dev = [
    "black>=22.0.0",
    "flake8>=4.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pre-commit>=2.15.0",
    "ipython>=8.0.0",
]

[project.urls]
"Homepage" = "https://github.com/ko6gxm/radiobridge"
"Documentation" = "https://github.com/ko6gxm/radiobridge#readme"
"Bug Tracker" = "https://github.com/ko6gxm/radiobridge/issues"
"Repository" = "https://github.com/ko6gxm/radiobridge"
"Author Website" = "https://ko6gxm.com"
"Discussions" = "https://github.com/ko6gxm/radiobridge/discussions"

[project.scripts]
rb = "radiobridge.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --cov=radiobridge --cov-report=term-missing --cov-report=html --cov-report=xml"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src/radiobridge"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__main__.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self\\.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod"
]
ignore_errors = true
show_missing = true

[tool.coverage.html]
directory = "htmlcov"
title = "RadioBridge Coverage Report"

[tool.coverage.xml]
output = "coverage.xml"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "build", "dist", ".venv"]
